--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,6 @@ plugins/*
 
 # Ignore everything in "themes" except the active theme. #
 themes/*
-!themes/hilldmc/
+!themes/cjmedia/
 # Ignore packages #
-themes/hilldmc/node_modules/
+themes/cjmedia/node_modules/
