--- a/themes/cjmedia/package.json
+++ b/themes/cjmedia/package.json
@@ -30,11 +30,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/redacademy/redstarter.git"
+    "url": "git+https://github.com/hillmclean/cjmedia.git"
   },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/redacademy/redstarter/issues"
   },
-  "homepage": "https://github.com/redacademy/redstarter#readme"
+  "homepage": "https://github.com/hillmclean/cjmedia"
 }
