--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 !README.md
 # Ignore everything in "plugins" except certain plugins. #
 plugins/*
+!plugins/cjmedia-functionality 
 
 # Ignore everything in "themes" except the active theme. #
 themes/*
