--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Ignore everything in "plugins" except certain plugins. #
 plugins/*
 !plugins/cjmedia-functionality 
+!plugins/cjmedia-showcase
 
 # Ignore everything in "themes" except the active theme. #
 themes/*
